feat(quarkus): WIP - Quarkus support